<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="cr.tec.desarrollomovil.lectuticas.PreguntasCeguaActivity"
                tools:showIn="@layout/activity_preguntas_cegua"
                android:background="@drawable/cegua">

    <LinearLayout
            android:id="@+id/linearLayout1"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_above="@+id/btnPreguntaSiguiente"
            >

        <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/titulo_comprension_lectura"
                android:id="@+id/textView"
                style="@style/Texto_Titulo" />
        <Space
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                />
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/texto_pregunta"
                android:id="@+id/tvPregunta"
                android:background="#66000000"
                style="@style/Texto_Cuerpo_ComprensionLectura" />

        <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#66000000"
                android:id="@+id/conjunto"
                >


            <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/respuesta_a"
                    android:id="@+id/rbRespuesta1"
                    android:checked="false"
                    style="@style/Texto_Opciones_ComprensionLectura" />

            <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/respuesta_b"
                    android:id="@+id/rbRespuesta2"
                    android:checked="false"
                    style="@style/Texto_Opciones_ComprensionLectura" />

            <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/respuesta_c"
                    android:id="@+id/rbRespuesta3"
                    android:checked="false"
                    style="@style/Texto_Opciones_ComprensionLectura" />
        </RadioGroup>

        <Space
                android:id="@+id/space1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                />
    </LinearLayout>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente_pregunta"
            android:id="@+id/btnPreguntaSiguiente"
            style="@style/AppButton"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"/>

    <Button
            android:id="@+id/botonMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="1dp"
            android:minHeight="1dp"
            android:background="@drawable/boton_home"
            style="?android:attr/borderlessButtonStyle"
            android:layout_alignTop="@id/btnPreguntaSiguiente"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

</RelativeLayout>
